Update README.md to reflect the changes made for JBoss EAP